--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
