--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/webpacker": "3.5",
     "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
