--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "gsap": "^2.0.1",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-scroll-parallax": "^1.3.5",
+    "scrollmagic": "^2.0.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
