--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.3",
     "gsap": "^2.0.1",
     "jquery": "^3.3.1",
+    "moveto": "^1.7.3",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
