change db config to RDS

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,11 @@ test:
 #
 production:
   <<: *default
-  database: ic_openhouse_production
-  username: icopenhouse
+  # database: ic_openhouse_production
+  # username: icopenhouse
   # password: <%= ENV['IC-OPENHOUSE_DATABASE_PASSWORD'] %>
-  password: ic-openhouse-password
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
