add config db to yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,8 @@ production:
   # database: ic_openhouse_production
   # username: icopenhouse
   # password: <%= ENV['IC-OPENHOUSE_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
   database: <%= ENV['RDS_DB_NAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
