try changing webpack config

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "prettier": "^1.14.0",
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^2.11.1"
   }
 }
