--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -8,13 +8,12 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: ['app/assets','app/javascript']
+  resolved_paths: []
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
   extensions:
-    - .jsx
     - .js
     - .sass
     - .scss
@@ -63,7 +62,7 @@ production:
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
-  compile: true
+  compile: false
 
   # Cache manifest.json for performance
   cache_manifest: true
