--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -14,6 +14,7 @@ default: &default
   cache_manifest: false
 
   extensions:
+    - .jsx
     - .js
     - .sass
     - .scss
@@ -26,6 +27,7 @@ default: &default
     - .gif
     - .jpeg
     - .jpg
+    - .ttf
 
 development:
   <<: *default
