--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -13,7 +13,6 @@ files:
     owner: root
     group: root
     content: |
-      proxy_pass unix:///var/run/puma/my_app.sock;
       limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
       server {
         listen 80;
@@ -27,8 +26,9 @@ files:
 
         location / {
           limit_req zone=one burst=10;
-          proxy_pass http://my_app; # match the name of upstream directive which is defined above
-          proxy_set_header Host $host;
+          proxy_pass unix:///var/run/puma/my_app.sock;
+          #proxy_pass http://my_app; # match the name of upstream directive which is defined above
+          #proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
           # Pass health to rails.
