--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -28,7 +28,7 @@ files:
           limit_req zone=one burst=10;
           proxy_pass unix:///var/run/puma/my_app.sock;
           #proxy_pass http://my_app; # match the name of upstream directive which is defined above
-          #proxy_set_header Host $host;
+          proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
           # Pass health to rails.
